# plant-pathology-image-processor

./: .gitattributes  .gitignore  README.md  app.py  clustering.py  lesion_detector.py  output.csv  output.md  prototyping.py  pyproject.toml  requirements.txt  settings.json  test_sample.py  ui_functions.py
.github/workflows/: github-actions.yml  workflow.yml
results/: output.csv
results/black_velvet/: output.csv
results/grey_background/: output.csv
src/leaflesiondetector/: Lesion_Detection.py  app.py  clustering.py  leaf.py  lesion_detector.py  settings.json  ui_functions.py  vis_data_pipeline.py
src/leaflesiondetector/pages/: Cluster.py  Clustering.py  Visualization.py
test_results/: output.csv
tests/: test_lesion_detector.py  test_sample.py
