[project]
name = "leaflesiondetector"
version = "0.0.1"
authors = [
  { name="Arjun Iyer", email="iyer9@wisc.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AFIDSI/plant-pathology-image-processor"
"Bug Tracker" = "https://github.com/AFIDSI/plant-pathology-image-processor/issues"
