[project]
name = "leaflesiondetector"
version = "0.0.1"
authors = [
  { name="Arjun Iyer", email="iyer9@wisc.edu" },
  { name="Iain L. McConnell", email="lesion.detector@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy==1.24.2",
  "altair==4",
  "streamlit==1.33.0",
  "pandas==1.5.2",
  "pillow==10.3.0",
  "streamlit_lottie==0.0.3",
  "black==22.6.0",
  "pytest==7.2.1",
  "charset-normalizer==3.1.0",
  "chardet==5.1.0",
  "streamlit_image_coordinates==0.1.3",
  "streamlit_echarts==0.4.0",
  "scikit-image==0.20.0",
  "plotly==5.14.1"
]

[project.optional-dependencies]
dev = [
  "black==22.6.0",
  "pytest==7.2.1"
]

[project.urls]
"Homepage" = "https://github.com/AFIDSI/plant-pathology-image-processor"
"Bug Tracker" = "https://github.com/AFIDSI/plant-pathology-image-processor/issues"

[tool.pytest]
testpaths = "tests"